Closed Bug 891706 Opened 11 years ago Closed 11 years ago

crash in mozilla::dom::MediaRecorder::CheckPrincipal() when closing a tab while recording is started

Categories

(Core :: Audio/Video: Recording, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla25

People

(Reporter: jsmith, Assigned: rlin)

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(3 files)

Attached file Test Case
This bug was filed from the Socorro interface and is 
report bp-4ae59820-2b2e-4b6e-b7e8-8ffeb2130710 .
 ============================================================= 

STR

1. Load attached test case in a tab and have something else opened in a different tab
2. In console, run mediaRecorder.start();
3. Close the tab

Expected

We should shutdown the media recording gracefully.

Actual

Firefox crashes.
Blocks: 803414
Keywords: testcase
Should note there's one extra step there - make sure you accept permissions on Desktop Firefox when the gUM prompt appears.
Assignee: nobody → rlin
Attached patch patch v1Splinter Review
add check for GetOwner()
Attachment #773075 - Flags: review?(roc)
Attached patch check in patchSplinter Review
carry reviewer.
Tweaking the signature to workaround bug 865146.
Crash Signature: [@ mozilla::dom::MediaRecorder::CheckPrincipal()] → [@ mozilla::dom::MediaRecorder::CheckPrincipal() ]
https://hg.mozilla.org/mozilla-central/rev/2ba16b8a7f52
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Keywords: verifyme
QA Contact: jsmith
The tab case appears to no longer reproduce a crash with this patch. However, I'm now noticing that the firefox.exe process will not shutdown if Firefox is quit while recording is started. Filed bug 894134 to track this.
Status: RESOLVED → VERIFIED
Keywords: verifyme
No longer blocks: 803414
Component: Video/Audio → Video/Audio: Recording
No longer blocks: MediaRecording
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: