Bug 891706 - Crash in mozilla::dom::MediaRecorder::CheckPrincipal() when closing a tab while recording is started. r=roc